--- a/views/product/product-details.html
+++ b/views/product/product-details.html
@@ -10,6 +10,7 @@
                             <h2>Каталог</h2>
 
                             <?php include(ROOT.'/views/layouts/category.html'); ?>
+                          
                             
                         </div>
                     </div>
@@ -25,7 +26,7 @@
                                 <div class="col-sm-7">
                                     <div class="product-information"><!--/product-information-->
                                         <img src="../template/images/product-details/new.jpg" class="newarrival" alt="" />
-                                        <h2>Anne Klein Sleeveless Colorblock Scuba</h2>
+                                        <h2><?php echo $productItem['name']; ?></h2>
                                         <p>Код товара: 1089772</p>
                                         <span>
                                             <span>US $59</span>
@@ -44,26 +45,9 @@
                             </div>
                             <div class="row">                                
                                 <div class="col-sm-12">
-                                    <h5>Описание товара</h5>
-                                    <p>Разнообразный и богатый опыт постоянный количественный рост и 
-                                        сфера нашей активности требуют определения и уточнения направлений 
-                                        прогрессивного развития. Таким образом реализация намеченных плановых 
-                                        заданий требуют определения и уточнения форм развития.</p>
-                                    <p>Повседневная практика показывает, что новая модель организационной 
-                                        деятельности способствует подготовки и реализации позиций, занимаемых 
-                                        участниками в отношении поставленных задач. Таким образом постоянное 
-                                        информационно-пропагандистское обеспечение нашей деятельности влечет 
-                                        за собой процесс внедрения и модернизации форм развития.</p>
-                                    <p>Повседневная практика показывает, что новая модель организационной 
-                                        деятельности способствует подготовки и реализации позиций, занимаемых 
-                                        участниками в отношении поставленных задач. Таким образом постоянное 
-                                        информационно-пропагандистское обеспечение нашей деятельности влечет 
-                                        за собой процесс внедрения и модернизации форм развития.</p>
-                                    <p>Повседневная практика показывает, что новая модель организационной 
-                                        деятельности способствует подготовки и реализации позиций, занимаемых 
-                                        участниками в отношении поставленных задач. Таким образом постоянное 
-                                        информационно-пропагандистское обеспечение нашей деятельности влечет 
-                                        за собой процесс внедрения и модернизации форм развития.</p>
+                                    <h5>   </h5>
+                                        <?php echo $productItem['description']; ?>
+                                    <p>
                                 </div>
                             </div>
                         </div><!--/product-details-->
