--- a/views/layouts/header.html
+++ b/views/layouts/header.html
@@ -6,22 +6,22 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <title>Товар</title>
-        <link href="../template/css/bootstrap.min.css" rel="stylesheet">
-        <link href="../template/css/font-awesome.min.css" rel="stylesheet">
-        <link href="../template/css/prettyPhoto.css" rel="stylesheet">
-        <link href="../template/css/price-range.css" rel="stylesheet">
-        <link href="../template/css/animate.css" rel="stylesheet">
-        <link href="../template/css/main.css" rel="stylesheet">
-        <link href="../template/css/responsive.css" rel="stylesheet">
+        <link href="/template/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/template/css/font-awesome.min.css" rel="stylesheet">
+        <link href="/template/css/prettyPhoto.css" rel="stylesheet">
+        <link href="/template/css/price-range.css" rel="stylesheet">
+        <link href="/template/css/animate.css" rel="stylesheet">
+        <link href="/template/css/main.css" rel="stylesheet">
+        <link href="/template/css/responsive.css" rel="stylesheet">
         <!--[if lt IE 9]>
         <script src="js/html5shiv.js"></script>
         <script src="js/respond.min.js"></script>
         <![endif]-->       
         <link rel="shortcut icon" href="images/ico/favicon.ico">
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../template/images/ico/apple-touch-icon-144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../template/images/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../template/images/ico/apple-touch-icon-72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="../template/images/ico/apple-touch-icon-57-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/template/images/ico/apple-touch-icon-144-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/template/images/ico/apple-touch-icon-114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/template/images/ico/apple-touch-icon-72-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" href="/template/images/ico/apple-touch-icon-57-precomposed.png">
     </head><!--/head-->
 
     <body>
@@ -54,7 +54,7 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="logo pull-left">
-                                <a href="index.html"><img src="../template/images/home/logo.png" alt="" /></a>
+                                <a href="index.html"><img src="/template/images/home/logo.png" alt="" /></a>
                             </div>
                         </div>
                         <div class="col-sm-8">
@@ -84,16 +84,16 @@
                             </div>
                             <div class="mainmenu pull-left">
                                 <ul class="nav navbar-nav collapse navbar-collapse">
-                                    <li><a href="#" class="active">Главная</a></li>
-                                    <li class="dropdown"><a href="#">Магазин<i class="fa fa-angle-down"></i></a>
+                                    <li><a href="/" class="active">Главная</a></li>
+                                    <li class="dropdown"><a href="/catalog/">Магазин<i class="fa fa-angle-down"></i></a>
                                         <ul role="menu" class="sub-menu">
-                                            <li><a href="#">Каталог товаров</a></li>
-                                            <li><a href="#">Корзина</a></li> 
+                                            <li><a href="/catalog/">Каталог товаров</a></li>
+                                            <li><a href="/cart/">Корзина</a></li> 
                                         </ul>
                                     </li> 
-                                    <li><a href="#">Блог</a></li> 
-                                    <li><a href="#">О магазине</a></li>
-                                    <li><a href="#">Контакты</a></li>
+                                    <li><a href="/blog/">Блог</a></li> 
+                                    <li><a href="/about/">О магазине</a></li>
+                                    <li><a href="/contacts/">Контакты</a></li>
                                 </ul>
                             </div>
                         </div>
