--- a/views/catalog/catalog.html
+++ b/views/catalog/catalog.html
@@ -40,7 +40,13 @@
                             </div>
                             <?php endforeach; ?>
 
-                        </div><!--features_items-->
+                        </div>
+
+                    <?php echo $pagination -> get(); ?>
+
+
+
+                        <!--features_items-->
 
                        <!--  <div class="recommended_items">
 
