--- a/views/site/index.html
+++ b/views/site/index.html
@@ -48,6 +48,8 @@
                             </div>
                             <?php endforeach; ?>
 
+                            <?php echo $pagination -> get(); ?>
+
                         </div><!--features_items-->
 
                         <div class="recommended_items"><!--recommended_items-->
