--- a/views/site/index.html
+++ b/views/site/index.html
@@ -33,7 +33,7 @@
                                                 <?php echo $productItem['name']; ?>
                                                 </a>  
                                             </p>
-                                            <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>В корзину</a>
+                                            <a href="cart/add/<?php echo $productItem['id']; ?>" class="btn btn-default add-to-cart" data-id="<?php echo $productItem['id']; ?>"><i class="fa fa-shopping-cart"></i>В корзину</a>
 
 
                                         </div>
