--- a/views/layouts/header.html
+++ b/views/layouts/header.html
@@ -32,8 +32,8 @@
                         <div class="col-sm-6">
                             <div class="contactinfo">
                                 <ul class="nav nav-pills">
-                                    <li><a href="#"><i class="fa fa-phone"></i> +38 093 000 11 22</a></li>
-                                    <li><a href="#"><i class="fa fa-envelope"></i> zinchenko.us@gmail.com</a></li>
+                                    <li><a href="#"><i class="fa fa-phone"></i>+7-913-471-12-62</a></li>
+                                    <li><a href="#"><i class="fa fa-envelope"></i>uniqcle@yandex.ru</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -60,9 +60,24 @@
                         <div class="col-sm-8">
                             <div class="shop-menu pull-right">
                                 <ul class="nav navbar-nav">                                    
-                                    <li><a href="#"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
-                                    <li><a href="#"><i class="fa fa-user"></i> Аккаунт</a></li>
-                                    <li><a href="#"><i class="fa fa-lock"></i> Вход</a></li>
+                                  
+
+                                    <li><a href="/cart/"><i class="fa fa-shopping-cart"></i> Корзина(
+                                        <span id = "cart-count"><?php echo Cart::countItemsInCart(); ?></span>)
+                                    </a></li>
+ 
+                                    <?php
+                                        if(User::isGuest()){ ?>
+                                         <li><a href="/user/login"><i class="fa fa-lock"></i> Вход</a></li>
+                                    <?php
+                                    }     
+                                    else { ?>
+                                          <li><a href="/cabinet/"><i class="fa fa-user"></i> Аккаунт</a></li>
+                                          <li><a href="/user/logout"><i class="fa fa-unlock"></i> Выход</a></li>
+                                    <?php
+                                    }
+                                    ?>
+                                    
                                 </ul>
                             </div>
                         </div>
