--- a/views/layouts/footer.html
+++ b/views/layouts/footer.html
@@ -31,5 +31,16 @@
                 }); 
             }); 
         </script>
+        <!--Скрипт удаления товаров из корзины --> 
+        <script>
+            $(function(){
+                $("#del-from-cart").click(function(){
+                    alert('Удалить товар?'); 
+
+                }); 
+
+            }); 
+
+        </script>
     </body>
 </html>
