--- a/views/cart/index.html
+++ b/views/cart/index.html
@@ -35,8 +35,9 @@
                                              <td><?php echo $product['price']; ?></td>
                                              <td><?php echo $productsInCart[$product['id']] ?></td>
                                              <td>
-                                                 <div class="close">
-                                                    <i class="fa fa-times " aria-hidden="true"></i>
+                                                 <div class="close" id = "del-from-cart">
+                                                    <!--<i class="fa fa-times " aria-hidden="true"></i>-->
+                                                    <a href = "/product/<?php echo $product['id']; ?>"><i class="fa fa-times " aria-hidden="true"></i></a>
                                                  </button>
 
 
