--- a/views/layouts/footer.html
+++ b/views/layouts/footer.html
@@ -12,12 +12,20 @@
 
 
 
+    
         <script src="../template/js/jquery.js"></script>
         <script src="../template/js/bootstrap.min.js"></script>
         <script src="../template/js/jquery.scrollUp.min.js"></script>
         <script src="../template/js/price-range.js"></script>
         <script src="../template/js/jquery.prettyPhoto.js"></script>
         <script src="../template/js/main.js"></script>
+
+        <!--Слайдер--> 
+        <script src = "../template/js/jquery.cycle2.min.js"></script>
+        <script src = "../template/js/jquery.cycle2.carousel.min.js"></script>
+
+      
+
         <!--Скрипт добавления товаров в корзину --> 
         <script>
             $(function(){
@@ -31,16 +39,6 @@
                 }); 
             }); 
         </script>
-        <!--Скрипт удаления товаров из корзины --> 
-        <script>
-            $(function(){
-                $("#del-from-cart").click(function(){
-                    alert('Удалить товар?'); 
-
-                }); 
-
-            }); 
-
-        </script>
+         
     </body>
 </html>
