--- a/views/cart/index.html
+++ b/views/cart/index.html
@@ -14,6 +14,13 @@
                     <div class="col-sm-9 padding-right">
                         <div class="features_items"><!--features_items-->
                             <h2 class="title text-center">Корзина</h2>
+
+                            <?php if(!$fullCart){
+                                echo 'Ваша корзина пуста. Выберите товар, пожалуйста. </br>'; 
+                                echo "Перейти на <a href = '/'>На главную</a>"; 
+
+                            } else { ?>
+                        
                             <p>Вы выбрали товары: </p>
                             <table class = "table-borderd table-condensed table-hover table-striped table">
 
@@ -29,7 +36,8 @@
                                      </thead>
                                      <tbody>
                                      <?php foreach($products as $product): ?>
-                                         <tr>
+                                         <tr class = "del-item">
+                                            
                                              <td><?php echo $product['code']; ?></td>
                                              <td><a href = "/product/<?php echo $product['id']; ?>"><?php echo $product['name']; ?></a></td>
                                              <td><?php echo $product['price']; ?></td>
@@ -37,9 +45,9 @@
                                              <td>
                                                  <div class="close" id = "del-from-cart">
                                                     <!--<i class="fa fa-times " aria-hidden="true"></i>-->
-                                                    <a href = "/product/<?php echo $product['id']; ?>"><i class="fa fa-times " aria-hidden="true"></i></a>
+                                                    <a href = "/cart/delete/<?php echo $product['id']; ?>"><i class="fa fa-times " aria-hidden="true"></i></a>
                                                  </button>
-
+ 
 
                                              </td>
                                          </tr>
@@ -62,6 +70,9 @@
                                 Оформить заказ
                             </a>
                             </div>
+
+                           <?php } ?>
+
                             
                         </div>                      
   
