--- a/views/layouts/header.html
+++ b/views/layouts/header.html
@@ -22,6 +22,8 @@
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/template/images/ico/apple-touch-icon-114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/template/images/ico/apple-touch-icon-72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="/template/images/ico/apple-touch-icon-57-precomposed.png">
+
+
     </head><!--/head-->
 
     <body>
@@ -62,8 +64,17 @@
                                 <ul class="nav navbar-nav">                                    
                                   
 
-                                    <li><a href="/cart/"><i class="fa fa-shopping-cart"></i> Корзина(
-                                        <span id = "cart-count"><?php echo Cart::countItemsInCart(); ?></span>)
+                                    <li><a href="/cart/"><i class="fa fa-shopping-cart"></i> Корзина (                                
+                                        <span id = "cart-count">
+
+                                            <?php 
+                                            if(!Cart::countItemsInCart()){
+                                                echo 'Пустая'; 
+                                            } else {
+                                                echo Cart::countItemsInCart(); 
+                                            }
+                                            ?></span>)
+                                   
                                     </a></li>
  
                                     <?php
