--- a/views/site/index.html
+++ b/views/site/index.html
@@ -1,7 +1,5 @@
 <?php include(ROOT.'/views/layouts/header.html'); ?>
- 
-
-        <section>
+         <section>
             <div class="container">
                 <div class="row">
                     <div class="col-sm-3">
@@ -52,101 +50,56 @@
 
                         </div><!--features_items-->
 
-                        <div class="recommended_items"><!--recommended_items-->
-                            <h2 class="title text-center">Рекомендуемые товары</h2>
+                    <div class="recommended_items"><!--recommended_items-->
+                    <h2 class="title text-center">Рекомендуемые товары</h2>
 
-                            <div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
-                                <div class="carousel-inner">
-                                    <div class="item active">	
-                                        <div class="col-sm-4">
-                                            <div class="product-image-wrapper">
-                                                <div class="single-products">
-                                                    <div class="productinfo text-center">
-                                                        <img src="../template/images/home/recommend1.jpg" alt="" />
-                                                        <h2>$56</h2>
-                                                        <p>Easy Polo Black Edition</p>
-                                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>В корзину</a>
-                                                    </div>
+                          <div class="cycle-slideshow" 
+                         data-cycle-fx=carousel
+                         data-cycle-timeout=5000
+                         data-cycle-carousel-visible=3
+                         data-cycle-carousel-fluid=true
+                         data-cycle-slides="div.item"
+                         data-cycle-prev="#prev"
+                         data-cycle-next="#next"
+                         >                        
+                             <?php foreach ($sliderProducts as $sliderItem): ?>
+                            <div class="item">
+                                <div class="product-image-wrapper">
+                                    <div class="single-products">
+                                        <div class="productinfo text-center">
+                                           <?php /* <img src="<?php echo Product::getImage($sliderItem['id']); ?>" alt="" />*/ ?>
+                                            <h2>$<?php echo $sliderItem['price']; ?></h2>
+                                            <a href="/product/<?php echo $sliderItem['id']; ?>">
+                                                <?php echo $sliderItem['name']; ?>
+                                            </a>
+                                            <br/><br/>
+                                           
 
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="product-image-wrapper">
-                                                <div class="single-products">
-                                                    <div class="productinfo text-center">
-                                                        <img src="../template/images/home/recommend2.jpg" alt="" />
-                                                        <h2>$56</h2>
-                                                        <p>Easy Polo Black Edition</p>
-                                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>В корзину</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="product-image-wrapper">
-                                                <div class="single-products">
-                                                    <div class="productinfo text-center">
-                                                        <img src="../template/images/home/recommend3.jpg" alt="" />
-                                                        <h2>$56</h2>
-                                                        <p>Easy Polo Black Edition</p>
-                                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>В корзину</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="item">	
-                                        <div class="col-sm-4">
-                                            <div class="product-image-wrapper">
-                                                <div class="single-products">
-                                                    <div class="productinfo text-center">
-                                                        <img src="../template/images/home/recommend1.jpg" alt="" />
-                                                        <h2>$56</h2>
-                                                        <p>Easy Polo Black Edition</p>
-                                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>В корзину</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="product-image-wrapper">
-                                                <div class="single-products">
-                                                    <div class="productinfo text-center">
-                                                        <img src="../template/images/home/recommend2.jpg" alt="" />
-                                                        <h2>$56</h2>
-                                                        <p>Easy Polo Black Edition</p>
-                                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>В корзину</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="product-image-wrapper">
-                                                <div class="single-products">
-                                                    <div class="productinfo text-center">
-                                                        <img src="../template/images/home/recommend3.jpg" alt="" />
-                                                        <h2>$56</h2>
-                                                        <p>Easy Polo Black Edition</p>
-                                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>В корзину</a>
-                                                    </div>
+                                            <a href="cart/add/<?php echo $sliderItem['id']; ?>" class="btn btn-default add-to-cart" data-id="<?php echo $sliderItem['id']; ?>"><i class="fa fa-shopping-cart"></i>В корзину</a>
 
-                                                </div>
-                                            </div>
+
                                         </div>
+                                        <?php if ($sliderItem['is_new']): ?>
+                                            <img src="/template/images/home/new.png" class="new" alt="" />
+                                        <?php endif; ?>
                                     </div>
                                 </div>
-                                <a class="left recommended-item-control" href="#recommended-item-carousel" data-slide="prev">
-                                    <i class="fa fa-angle-left"></i>
-                                </a>
-                                <a class="right recommended-item-control" href="#recommended-item-carousel" data-slide="next">
-                                    <i class="fa fa-angle-right"></i>
-                                </a>			
                             </div>
-                        </div><!--/recommended_items-->
+                        <?php endforeach; ?>
+
+                        <a class="left recommended-item-control" id="prev" href="#recommended-item-carousel" data-slide="prev">
+                        <i class="fa fa-angle-left"></i>
+                         </a>
+
+                    <a class="right recommended-item-control" id="next"  href="#recommended-item-carousel" data-slide="next">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
 
                     </div>
+</div><!--/recommended_items-->
+    
                 </div>
             </div>
         </section>
+
 <?php include(ROOT.'/views/layouts/footer.html'); ?>
